--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="d-flex align-items-end justify-content-between border-top">
                             <a href="https://drive.google.com/file/d/1kEl9K6AOu_fePkRcVY_0d-X5CsRo0W57/view?usp=sharing" class="btn w-50 border-end">Download CV</a>
-                            <a href="#contact" class="btn w-50 btn-scroll">Contact Me</a>
+                            <a href="https://www.youtube.com/watch?v=TiW6jl84diU&t=16s" class="btn w-50 btn-scroll">Video Introduction</a>
                         </div>
                     </div>
                 </div>
